--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "@types/node": "^15.6.1"
-  }
+  },
+  "name": "gis-sose-2021",
+  "description": "It's not like I want you to read me or anything ...baka.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node Kapitel3/Aufgabe1/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SorenWi/GIS-SoSe-2021.git"
+  },
+  "author": "sorenwi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SorenWi/GIS-SoSe-2021/issues"
+  },
+  "homepage": "https://github.com/SorenWi/GIS-SoSe-2021#readme"
 }
