--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "dependencies": {
-    "@types/node": "^15.6.1"
-  },
   "name": "gis-sose-2021",
   "description": "It's not like I want you to read me or anything ...baka.",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^15.9.0"
+  },
   "scripts": {
-    "start": "node Kapitel3/Aufgabe1/server.js"
+    "start": "node Kapitel3/Aufgabe2/server.js"
   },
   "repository": {
     "type": "git",
