--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/node": "^15.9.0"
   },
   "scripts": {
-    "start": "node Kapitel3/Aufgabe2/server.js"
+    "start": "node Kapitel3/Aufgabe4/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/SorenWi/GIS-SoSe-2021/issues"
   },
-  "homepage": "https://github.com/SorenWi/GIS-SoSe-2021#readme"
+  "homepage": "https://github.com/SorenWi/GIS-SoSe-2021#readme",
+  "dependencies": {
+    "@types/mongodb": "^3.6.18",
+    "mongodb": "^3.6.9"
+  }
 }
